--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/common": "^19.2.14",
+    "@angular/compiler": "^19.2.14",
+    "@angular/core": "^19.2.14",
+    "@angular/forms": "^19.2.14",
+    "@angular/platform-browser": "^19.2.14",
+    "@angular/platform-browser-dynamic": "^19.2.14",
+    "@angular/platform-server": "^19.2.14",
+    "@angular/router": "^19.2.14",
     "@angular/ssr": "^19.2.15",
-    "@nguniversal/express-engine": "^7.0.2",
+    "@primeng/themes": "^19.1.3",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.14",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
