--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --base-href /Interfaces-Ricas/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:temp": "node dist/temp/server/server.mjs"
+    "serve:ssr:temp": "node dist/temp/server/server.mjs",
+    "deploy": "ng deploy --base-href=/Interfaces-Ricas/"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
