--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@
 
 # Node
 /node_modules
+backend/node_modules
 npm-debug.log
 yarn-error.log
+package-lock.json
+backend/package-lock.json
 
 # IDEs and editors
 .idea/
@@ -40,3 +43,20 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+backend/.env
+
+# Logs
+*.log
+/logs
+backend/logs
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
